--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,9 +42,10 @@ android {
     }
     buildFeatures {
         compose true
+        viewBinding true
     }
     composeOptions {
-        kotlinCompilerExtensionVersion '1.4.3'
+        kotlinCompilerExtensionVersion '1.5.2'
     }
     packaging {
         resources {
@@ -60,6 +61,7 @@ apply from:"download.gradle"
 dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.7.0'
+    implementation 'androidx.core:core-i18n:1.0.0-alpha01'
     def nav_version = "2.7.7"
     def room_version = "2.6.1"
 
@@ -85,7 +87,7 @@ dependencies {
     kapt "androidx.room:room-compiler:$room_version"
 
     // Kotlin components
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.8.22"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:2.0.20"
     api "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.7.1"
     api "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.7.1"
 
@@ -110,4 +112,7 @@ dependencies {
     androidTestImplementation "com.google.truth:truth:1.1.3"
     debugImplementation 'androidx.compose.ui:ui-tooling'
     debugImplementation 'androidx.compose.ui:ui-test-manifest'
+
+    //Calendar
+    implementation 'com.kizitonwose.calendar:view:2.6.1'
 }
